--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   "dependencies": {
     "axios": "^1.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
-    "express": "^4.18.2",
-    "pg": "^8.7.3",
-    "socket.io": "^4.0.0",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
+    "pg": "^8.16.3",
+    "socket.io": "^4.8.1",
     "vue": "^3.3.0",
     "vue-router": "^4.1.0"
   },
   "devDependencies": {
-    "vite": "^4.5.14",
-    "@vitejs/plugin-vue": "^4.1.0"
+    "@vitejs/plugin-vue": "^4.1.0",
+    "vite": "^4.5.14"
   }
 }
